# dhs-docs

./: ICD_1.1_DHS_Interface.doc  Jun2007 nightly plan.v1.doc  Mail  NEWFIRM-Stat-011105.ppt  NEWFIRM_Strawman-modified-afg.ppt  Newfirm.gan  _icd  _icd.091004  _icd.comments  _irproc  _mmiller.proto  _notes  _rev  _stat.0111  _stat.0928  mscwfits  newfirm_dpp.ppt  response.txt  timing.ps
design/: _api
dhsDesign/: .gdb_history  Notes  Pseudo  Struct  Util.pseudo  icd_1.1_dhs_interface.fm
dhsDesign/API/: API.pseudo  Comm.pseudo
dhsDesign/mm-1.4.0/: ChangeLog  LICENSE  Makefile  Makefile.in  README  THANKS  aclocal.m4  config.h  config.status  configure  configure.ac  libmm.la  libtool  mm-config  mm-config.1  mm-config.in  mm-config.pod  mm.3  mm.h  mm.pod  mm_alloc.c  mm_alloc.lo  mm_core.c  mm_core.lo  mm_global.c  mm_global.lo  mm_lib.c  mm_lib.lo  mm_test  mm_test.c  mm_test.c~  mm_test.lo  mm_vers.c  mm_vers.lo
dhsDesign/radlib-2.3.0/: ChangeLog  Makefile.am  Makefile.in  README  config-radlib-arm-linux  config.h.in  configure  configure.in  radlib-api-reference.html  reconf
dhsDesign/radlib-2.3.0/database/mysql/: my_database.c
dhsDesign/radlib-2.3.0/database/postgresql/: pg_database.c
dhsDesign/radlib-2.3.0/debug/: Makefile  raddebug.c
dhsDesign/radlib-2.3.0/h/: radUDPsocket.h  radbuffers.h  radconffile.h  raddatabase.h  raddebug.h  radevents.h  radlist.h  radmsgLog.h  radprocess.h  radproclist.h  radprocutils.h  radqueue.h  radsemaphores.h  radshmem.h  radsocket.h  radsortlist.h  radstack.h  radstates.h  radsysdefs.h  radsystem.h  radsysutils.h  radtimeUtils.h  radtimers.h
dhsDesign/radlib-2.3.0/src/: radUDPsocket.c  radbuffers.c  radconffile.c  raddatabase.c  radevents.c  radlist.c  radmsgLog.c  radprocess.c  radproclist.c  radprocutils.c  radqueue.c  radsemaphores.c  radshmem.c  radshmem.c~  radsocket.c  radsortlist.c  radstates.c  radsysdefs.c  radsystem.c  radsysutils.c  radtimeUtils.c  radtimers.c
dhsDesign/radlib-2.3.0/template/: README  template.c  templateStates.c
dhsDesign/radlib-2.3.0/test/multicast/: multicast.c
dhsDesign/shmem/: Makefile  Notes  libsmCache.so.1.0  shmUtil.c  smCache.c  smCache.h  zz  zzdebug.c
dhsLibraries/: .#dhsUtil.h.1.3  Makefile
dhsLibraries/CVS/: Entries  Repository
dhsLibraries/_fits/: Makefile  dhsImplementationSpecifics.h  dhsTcl.c  dhsUtil.tex  dhsUtilAux.c  dhsUtilCloseConnect.c  dhsUtilCloseExp.c  dhsUtilFileOpen.c  dhsUtilIOCtl.c  dhsUtilOpenConnect.c  dhsUtilOpenExp.c  dhsUtilReadImage.c  dhsUtilSendMetaData.c  dhsUtilSendPixelData.c  dhsUtilSysClose.c  dhsUtilSysOpen.c
dhsLibraries/_noao/: Makefile  client.cxx  dhsImplementationSpecifics.h  dhsTcl.c  dhsTcl.h  dhsTcl.tcl  (+8 more)
dhs_api/: Notes
monsoon_api/: ICD_1.0_DHS_Interface.doc  README  api_suggestions  collector.cc  dhsOpenConnect.c  dhsOpenExp.c  dhsSysOpen.c  dhs_config  dhs_util.c  driver.c  farm.cc  farm.h  notes  obsSet.h  proto.c  proto.h  proto_driver.c  send_meta.c  send_pixel.c  supervisor.c  supervisor.txt  test.c
monsoon_api.old/: README  proto.h  proto_driver.c  proto_server.c  timing.c
(+100 files in other folders)
